native-repo: added tables/mapping and persistence for focus identities